# Shader-Bench

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
projects/: Shader-Bench.sln  Shader-Bench.vcxproj  Shader-Bench.vcxproj.filters
res/shaders/: cube.fs.sc  cube.vs.sc
src/: AssetLoader.cpp  AssetLoader.h  BGFXGraphics.cpp  Filesystem.cpp  Filesystem.h  GraphicsInterface.h  SironaGraphics.cpp  SironaLoader.cpp  SironaLoader.h  shader-bench.cpp
